Adding Name Comments in all files

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* DEVELOPER Smit Joshi, IS117-101, Fall 2022 */
+
 @import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap");
 
 /* Reset Css */
